--- a/index.html
+++ b/index.html
@@ -108,7 +108,16 @@
       </div>
         <p><a href="/datavis-course/2017_11_06/usa.html">usa.html</a></p>
         <p><a href="/datavis-course/2017_11_06/crimes.html">crimes.html</a></p>
-    </div
+    </div>
+
+    <div class="container">
+
+      <div class="page-header">
+        <h1>Atividade 20/11/2017</h1>
+      </div>
+        <p><a href="/datavis-course/2017_11_20/usa.html">usa.html</a></p>
+        <p><a href="/datavis-course/2017_11_20/earthquakes.html">crimes.html</a></p>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
