--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <h1>Atividade 20/11/2017</h1>
       </div>
         <p><a href="/datavis-course/2017_11_20/usa.html">usa.html</a></p>
-        <p><a href="/datavis-course/2017_11_20/earthquakes.html">crimes.html</a></p>
+        <p><a href="/datavis-course/2017_11_20/earthquakes.html">earthquakes.html</a></p>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
